style.css
@charset "UTF-8";
*, *:before, *:after {
  box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
    box-sizing:border-box;
  }

a {
    text-decoration: none;
}

h3 {
    color: white;
}


@font-face {
    font-family: title;
    src: url(assets/Lionel\ Classic\ Regular.ttf);
}

@font-face {
    font-family: subtitle;
    src: url(assets/Lionel\ Classic\ Regular.ttf);
}

@font-face {
    font-family: credits;
    src: url(assets/GoogleSansCode-VariableFont_wght.ttf);
}


html {
    background-image: url(assets/img/stars1.png);
    background-repeat:round;
    margin: 0;
    scroll-behavior: smooth;
    contain: content;
    background-size: 70px;
}

/* TITLE BOX */

#titlebox {
    background-color: red;
    height: 90vh;
    background-image: url(assets/img/imacsmall.jpg);
    background-size: cover;
    background-position: center;
    width: 100%;
    background-position-y: top;
}

#innertitlebox {
    position: relative;
    top: 50%;
    left: 50%;
    width: fit-content;
    transform: translate(-50%, -50%);
}

#title {
    z-index: 6;
    color: white;
    text-align: center;
    font-size: 100px;
    font-family: title;
    
}

#subtitle {
    color: rgb(255, 255, 255);
    text-align: center;
    z-index: 5;
    text-shadow: 0px 2px #000000;
    font-size: 30px;
    font-family: title;
}




/* NAV OPTIONS */

#navbar {
    
    color: white;
    text-align: center;
    min-height: 50px;
    background-color: #434057;
    border-width: 0px 0px 1px 0px;
    border-style: solid;
    border-color: white;
}

#navbar a {
    
    background-color: white;
    color: #434057;
    font-family: title;
    padding: 10px;
    font-size: large;
    font-weight: 100;
    transition-duration: 0.2s;
    margin: 10px;
    display: inline-block;
    transform: translateY(-15px);
}

#navbar a:hover {
    background-color: white;
    color: #6c678b;
    border-radius: 10px;
    transition-duration: 0.1s;
    transform: translateY(-25px);

}


/* HOME */


.contentbox {
    display: flex;
    width: 60%;
    margin: 20px;
    border-radius: 80px;
    
}

/* .sectionheader {
    font-family: title;
    z-index: 3;
    color: white;
    position: absolute;
    top: 40%;
    transform: rotate(-90deg) translateY(-130%);
}

.left-header {
    display: block;
    width: 100px;
    height: 100%;

} */

.left-header {
  display: flex;
  justify-content: center; /* centers horizontally inside 100px */
  align-items: center;     /* centers vertically */
  width: 100px;
  /* height: 100%; */
  position: relative;
}

.sectionheader {
  font-family: title;
  z-index: 3;
  color: white;
  transform: rotate(-90deg);
  white-space: nowrap;
}




footer {
    min-height: 200px;
    color: white;
    
}


#footercontainer {
    display: flex;
    justify-content: center;
    color: white;
    text-decoration: none;
    align-items: center;
    margin-top: 50px;
}

footer a {
    color:yellow;
    font-weight: 900;
    font-size: x-large;
}

footer table {
    display: block;
    text-align: center;
}


#planet {
    background-color: rgb(229 229 229);
    height: 200px;
    border-radius: 500px 500px 0px 0px;
    width: 400px;
    margin-left: auto;
    margin-right: auto;
    background-image: url(assets/img/New\ Piskel-1.png\ \(7\).png);
    background-position: center;
    background-position-x: -50px;


    text-align: center;
    font-family: credits;
    font-size: smaller;
    font-weight: 500;
    padding-top: 30px;
}


#planet a {
    color: rgb(231 255 232);
    font-size: large;
    text-shadow: 0px 2px black;
    font-family: title ;
    background-color: transparent !important;
}

#planet a:hover {
    color: rgb(255, 255, 255);
    text-shadow: 0px 5px rgb(109, 182, 0);
}


#credit {
    font-family: credits !important; 
    text-shadow: 0px 0px  !important; 
    color: #24bd00 !important;
}

#credit:hover {
    text-shadow: 0px 0px rgb(0, 123, 139) !important; 
    color: coral !important;
}


.selfie {
    display: block;
    margin: 10px;
    /* margin-left: auto;  Gives a nice space to the left of img without this option*/
    margin-right: 10px;
    border-radius: 20px;
    aspect-ratio: 0;
    float: left;
}

.description {
    font-family: 'credits';
    font-weight: 900;
    text-shadow: 0 1px black;
    font-size: 20px; /* NEW was 23 */
}

.content-within-video {
    width: 80%; 
    height: 80%; 
    margin: 10px;
    
}




@media (min-width: 10px) and (max-width: 1200px) {
    .closemodal {
      /* padding: 0px 30px 0px 10px; */
      border-radius: 10px 0px 0px 10px;
    }
    
    .content-within {

    }

    .content-within-video {
        width: 98%;
        height: 100%;
        margin: 2px;
    }

    #body {
    width: 100%; 
    
    }

    #titlebox {
        height: 80vh;
    }

    .contentbox {
        width: 97%;
        margin: 0px;
        margin-bottom: 50px !important;
        border-radius: 0px 80px 80px 0px;
        clear: both;
        height: fit-content;
    }

    .left-header {
        width: 40px;
        height: auto ;
        flex-shrink: 0;
        min-width: 50px;
    }

    .selfie {
        margin-left: 10px;
        margin-right: 10px;
        width: 50%;
        height: fit-content;
        float: left;
    }

    #body::after {
    content: "";
    display: table;
    clear: both;
    }

}

